# antropy.dev

./: .env.example  .gitguardian.yaml  .gitignore  ACCOUNT_CREATION_FIX.md  ARCHITECTURE.md  BACKEND_SETUP_GUIDE.md  DIFFS_P0_FIXES.md  DOCUMENTATION_INDEX.md  Dockerfile  FINAL_SCANNING_ENGINE_SUMMARY.md  INTEGRATION_CHECKLIST.md  P0_FIXES_SUMMARY.md  PROJECT_MAPPING.md  QUICK_START.md  README.md  README_ACCOUNT_ISSUE.md  SCANNING_ENGINE_COMMIT_MESSAGE.txt  SCANNING_ENGINE_FIX.md  SCANNING_ENGINE_FIXES_SUMMARY.md  TEST_FIXES.md  VERIFY_FIXES.md  VERIFY_SCANNING_ENGINE.md  WHY_FAILED_TO_FETCH.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  pr-checks.yml  security.yml
client/: README.md  package-lock.json  pnpm-lock.yaml
client/src/app/: globals.css  layout.tsx  page.tsx
client/src/app/dashboard/: page.tsx
client/src/app/login/: page.tsx
client/src/app/register/: page.tsx
client/src/components/: entropy-ui.tsx
client/src/lib/: api.ts
security/: README.md
server/: .env.example  Dockerfile  pyproject.toml  pytest.ini
server/src/appsec/: config.py  logging.py  main.py
server/src/appsec/alembic/: env.py
server/tests/integration/: test_auth_flow.py  test_quick_scan.py
src/appsec/: config.py  logging.py
src/appsec/alembic/: env.py
src/appsec/api/: deps.py  middleware.py
src/appsec/domain/: exceptions.py
src/appsec/infrastructure/: celery_app.py  redis_client.py
tests/: conftest.py
tests/integration/: test_scan_job_domain_gate.py
tests/unit/: test_domain_not_verified_gate.py
(+147 files in other folders)
